--- a/landing_girls_6.html
+++ b/landing_girls_6.html
@@ -64,40 +64,40 @@
     <h1>🔥 Meet Local Girls Looking for Fun 🔥</h1>
     <div class="grid">
         <div class="girl">
-            <img src="https://i.imgur.com/SkXQeEi.jpg" alt="Victoria">
+            <img src="https://imgur.com/a/Bbm4211" alt="Victoria">
             <h2>Victoria, 31</h2>
             <p>Lonely and ready for action 😘</p>
-            <a href="https://secretgirlz.com/victoria.html?aff_sub=girl1" target="_blank">👉 Chat Now</a>
+            <a href="https://secretgirlz.com/victoria.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="https://i.imgur.com/9OaQXv0.jpg" alt="Savannah">
+            <img src="https://imgur.com/a/17ET9ef" alt="Savannah">
             <h2>Savannah, 26</h2>
             <p>Latina babe looking for a hookup 💋</p>
-            <a href="https://secretgirlz.com/savannah.html?aff_sub=girl2" target="_blank">👉 Chat Now</a>
+            <a href="https://secretgirlz.com/savannah.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="https://i.imgur.com/3p6tqvD.jpg" alt="Sarah">
+            <img src="https://imgur.com/a/EZuhlyv" alt="Sarah">
             <h2>Sarah, 23</h2>
             <p>Shy but curious... 😏</p>
-            <a href="https://secretgirlz.com/sarah.html?aff_sub=girl3" target="_blank">👉 Chat Now</a>
+            <a href="https://secretgirlz.com/sarah.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="https://i.imgur.com/tQ5kSBW.jpg" alt="Emily">
+            <img src="https://imgur.com/a/VoxLY5B" alt="Emily">
             <h2>Emily, 35</h2>
             <p>Mature MILF waiting for you 🍑</p>
-            <a href="https://secretgirlz.com/sarah.html?aff_sub=girl4" target="_blank">👉 Chat Now</a>
+            <a href="https://secretgirlz.com/sarah.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="https://i.imgur.com/Rs8EOk1.jpg" alt="Samantha">
+            <img src="https://imgur.com/a/wlwyQgF" alt="Samantha">
             <h2>Samantha, 28</h2>
             <p>Wants to chat tonight 🔥</p>
-            <a href="https://secretgirlz.com/samantha.html?aff_sub=girl5" target="_blank">👉 Chat Now</a>
+            <a href="https://secretgirlz.com/samantha.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="https://i.imgur.com/vUuHJ3X.jpg" alt="Rebecca">
+            <img src="https://imgur.com/a/sfDRgrug" alt="Rebecca">
             <h2>Rebecca, 30</h2>
             <p>Discreet & playful blonde 😉</p>
-            <a href="https://secretgirlz.com/rebecca.html?aff_sub=girl6" target="_blank">👉 Chat Now</a>
+            <a href="https://secretgirlz.com/rebecca.html" target="_blank">👉 Chat Now</a>
         </div>
     </div>
 </body>
