--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     <h1>🔥 Meet Local Girls Looking for Fun 🔥</h1>
     <div class="grid">
         <div class="girl">
-            <img src="https://imgur.com/a/Bbm4211" alt="Victoria">
+            <img src="photo_5773625103681178442_y.jpg" alt="Victoria">
             <h2>Victoria, 31</h2>
             <p>Lonely and ready for action 😘</p>
             <a href="https://secretgirlz.com/victoria.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="https://imgur.com/a/17ET9ef" alt="Savannah">
+            <img src="photo_5773625103681178441_y.jpg" alt="Savannah">
             <h2>Savannah, 26</h2>
             <p>Latina babe looking for a hookup 💋</p>
             <a href="https://secretgirlz.com/savannah.html" target="_blank">👉 Chat Now</a>
@@ -81,19 +81,19 @@
             <a href="https://secretgirlz.com/sarah.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="https://imgur.com/a/VoxLY5B" alt="Emily">
+            <img src="photo_5773625103681178440_y.jpg" alt="Emily">
             <h2>Emily, 35</h2>
             <p>Mature MILF waiting for you 🍑</p>
             <a href="https://secretgirlz.com/sarah.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="https://imgur.com/a/wlwyQgF" alt="Samantha">
+            <img src="photo_5773625103681178439_y.jpg" alt="Samantha">
             <h2>Samantha, 28</h2>
             <p>Wants to chat tonight 🔥</p>
             <a href="https://secretgirlz.com/samantha.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="https://imgur.com/a/sfDRgrug" alt="Rebecca">
+            <img src="photo_5773625103681178438_y.jpg" alt="Rebecca">
             <h2>Rebecca, 30</h2>
             <p>Discreet & playful blonde 😉</p>
             <a href="https://secretgirlz.com/rebecca.html" target="_blank">👉 Chat Now</a>
