--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
             <a href="https://secretgirlz.com/savannah.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="https://imgur.com/a/EZuhlyv" alt="Sarah">
+            <img src="photo_5773625103681178441_y.jpg" alt="Sarah">
             <h2>Sarah, 23</h2>
             <p>Shy but curious... 😏</p>
             <a href="https://secretgirlz.com/sarah.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="photo_5773625103681178440_y.jpg" alt="Emily">
+            <img src="photo_5773625103681178438_y.jpg" alt="Emily">
             <h2>Emily, 35</h2>
             <p>Mature MILF waiting for you 🍑</p>
             <a href="https://secretgirlz.com/sarah.html" target="_blank">👉 Chat Now</a>
@@ -93,7 +93,7 @@
             <a href="https://secretgirlz.com/samantha.html" target="_blank">👉 Chat Now</a>
         </div>
         <div class="girl">
-            <img src="photo_5773625103681178438_y.jpg" alt="Rebecca">
+            <img src="photo_5773625103681178440_y.jpg" alt="Rebecca">
             <h2>Rebecca, 30</h2>
             <p>Discreet & playful blonde 😉</p>
             <a href="https://secretgirlz.com/rebecca.html" target="_blank">👉 Chat Now</a>
